# kreta-homeassistant

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements-ha.txt
.github/workflows/: ci.yml
custom_components/kreta/: __init__.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/kreta/api/: __init__.py  auth.py  client.py  diagnostics.py  exceptions.py  models.py  storage.py
custom_components/kreta/translations/: en.json  hu.json
docs/: architecture.md  current-state.md  esphome.md
scripts/: run-homeassistant.sh
tests/: conftest.py
tests/components/kreta/: test_api.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_init.py
