[project]
name = "kreta-homeassistant"
version = "2026.04.24.1"
description = "Unofficial Home Assistant custom integration for Kreta"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["custom_components/kreta"]

[tool.coverage.report]
fail_under = 90
show_missing = true

